# vaultwares-pipelines

./: .env  .flake8  .gitignore  .gitmodules  API_START.md  CONTRIBUTING.md  README.md  TASKS.md  agent_image.md  agent_manifest.md  agent_text.md  agent_video.md  agent_workflow.md  api_server.py  assign_spa_tasks.py  assign_tasks.py  brume2_nginx.conf.example  build_gradio_app.ps1  coordination_plan.md  demo_active_coordination.py  fix_git_markers.py  generate_local_tls_certs.ps1  gradio_app_debug.log.bak  gradio_error.log.bak  package-lock.json  package.json  plan_spa.md  pyproject.toml  requirements.txt  run_coordinated_system.py  run_local_worker.py  spa_agent_claim.txt  start_https_dev.ps1  test_worker_pipeline.py  workflow_gui_gradio.spec.bak
.github/: vault-flows-deploy.yml
.github/agents/: README.md
.github/workflows/: bootstrap-vault-flows.yml  ci.yml
.jules/: sentinel.md
agents/: branding.md
ai_model/: __init__.py  agent_interface.py  agent_registry.py  central_error_logger.py  compliance.py  context_schema.py  cosmos_3d_env_workflow.py  event_bus.py  gradio_3d_env.md  gradio_3d_env.py  nim_cosmos_api.md  redis_coordination.py  shared_context.py  validation_utils.py  workflow_export_agent.py
ai_model/core/: __init__.py  config.py  model.py  text_model.py
ai_model/image/: __init__.py  folder_captioner.md  folder_captioner.py  image_to_3d.md  image_to_3d.py  (+4 more)
examples/: 01_image_basics.py  02_masking_inpainting.py  03_video_processing.py  04_prompt_generation.py  05_workflows.py  demo_text_to_image_edit_workflow.py  local_text_to_image_workflow.py  optimal_text_to_image_workflow.py  pipeline_qwenimage_controlnet_inpaint.py  workflow_gui_gradio.py  workflow_gui_gradio.py.bak
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
smolvlm2_wrapper/: __init__.py  api_skeleton.py  cosmos_3d_env_workflow.py  gradio_3d_env.py  gradio_3d_env_instructions.md  nim_cosmos_api.py
tests/: __init__.py  test_core.py  test_image.py  test_text.py  test_theme_manager.py  test_video.py  test_workflow_export_agent.py  test_workflows.py
vaultwares-agentciation/: .git.bak  LICENSE  README.md  __init__.py  agent1_nvidia_wfm.md  agent1_research.py  agent2_faceswap_objectdel.md  agent2_research.py  base_agent.py  extrovert.agent.md  extrovert_agent.py  lonely-manager.agent.md  lonely_manager.py  pipeline_faceswap.md  pipeline_nvidia_wfm.md  pipeline_object_removal.md  redis.conf  run_lonely_manager.py  run_worker_agent.py  skills.md
vaultwares-themes/: AGENTS.md  PQC_PROTOCOL_IMPLEMENTATION.md  README.md  agent-ledger.md  qt_exporter.py  theme_manager.py
(+105 files in other folders)
