[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultwares-pipelines"
version = "0.1.0"
description = "VaultWares core AI/media orchestration engine for multimodal pipelines"
keywords = ["vaultwares", "ai-pipelines", "multimodal", "video-processing", "local-ai", "privacy-first"]
authors = [{ name = "VaultWares" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
video = ["opencv-python>=4.8.0"]
memory = ["psutil>=5.9.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "opencv-python>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
